Fixed jumbotron issue with overflow and spacing between navigation items

--- a/client/scss/components/jumbotron.scss
+++ b/client/scss/components/jumbotron.scss
@@ -7,9 +7,9 @@
   font-weight: 800;
   font-size: 14rem;
   line-height: 0.83;
+  overflow: hidden;
 
   &-text {
-    padding-left: 2%;
     opacity: 0.2;
   }
 }
