--- a/client/scss/pages/_app.scss
+++ b/client/scss/pages/_app.scss
@@ -17,6 +17,7 @@ a:visited {
 
 ul {
   margin: 0;
+  margin-right: 2rem;
 }
 
 .main {
